--- a/css/styles.css
+++ b/css/styles.css
@@ -475,7 +475,7 @@ a {
   background-color: #404bbf;
   border: none;
 }
-.butron-close-icon {
+.button-close-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-close:hover .button-close-icon {
@@ -602,4 +602,61 @@ a {
   letter-spacing: 0.04em;
   color: #fff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-form-container {
+  margin-left: auto;
+}
+.footer-form-text {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-left: 16px;
+}
+.footer-form-hero {
+  display: flex;
+  gap: 24px;
+}
+.footer-sub-input {
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: #ffffff;
+  margin-left: 16px;
+}
+.footer-sub-input::placeholder {
+  color: #ffffff;
+}
+.footer-sub-button {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+}
+.footer-sub-button-icon {
+  margin-left: 16px;
+  fill: #fff;
+}
+.footer-sub-input:focus {
+  background-color: #31d0aa;
 }
